2007-08-26  Martin Nordholts  <martinn@svn.gnome.org>

	* libgimpwidgets/gimpcolorprofilestore.h: Add a G_END_DECLS.

2007-08-24  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-save.c (save_dialog): use a label that is
	easier to understand.  Required code changes will follow later.

2007-08-24  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-settings.c (jpeg_swap_original_settings): new
	function that swaps the vertical and horizontal axis for the saved
	subsampling parameters and quantization tables.

	* plug-ins/jpeg/jpeg-exif.c (jpeg_exif_rotate): swap the saved
	settings when the image is rotated.  Fixes bug #466593.

2007-08-24  Raphaël Quinet  <raphael@gimp.org>

	* tools/pdbgen/pdb/selection.pdb: fixed incorrect description of
	gimp-selection-is-empty, reported by pk.  This function returns
	TRUE when the selection is empty, but the description stated the
	opposite.

	* app/pdb/selection_cmds.c
	* libgimp/gimpselection_pdb.c: regenerated.
	
2007-08-24  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-draw.c
	(gimp_display_shell_draw_area): don't use SCALEX()/SCALEY() on x/y
	*and* width/height of the highlight rectangle because that adds up
	the error introduced by the ceil() contained in these macros.
	Instead, scale manually and use ceil() on x/y and floor() on
	width/height. Fixes off-by-one rendering artifacts (bug #467972).

2007-08-24  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c: don't use g_slice_dup(), that's
	in GLib 2.14 only.

2007-08-24  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: s/compute_sample/box_filter/.

2007-08-24  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c: allocate shell->highlight with
	GSlice.

2007-08-24  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: swapped center and middle
	terms around (now center means horizontal (betwen left and right )and