@@ -14,8 +14,9 @@ LT_RELEASE = $(PKG_VER)
 
 OBJECTS = \
 	paint-funcs.obj \
-	scale-funcs.obj \
-	sample-funcs.obj \
+	reduce-region.obj \
+	scale-region.obj \
+	subsample-region.obj \
 
 mmx_sources = \
 	
