@@ -7,7 +7,7 @@ GIMP_VER = 2.0
 # and stuff is saved.
 GIMPDIR = _gimp$(GIMP_VER)
 # don't interfer with stable version
-GIMPDIR = _gimp-2.3.x
+GIMPDIR = _gimp-2.4
 
 # Build app/* as DLLs; don't define this, it doesn't work yet.
 #DLLGIMP = 1 
